@@ -92,7 +92,7 @@ CONF.SORTEDQUEUE_THRESHOLD = 200_000
 
 ##CONF.N_MOD_GROUP_BY = 5
 #CONF.N_MOD_GROUP_BY = 40
-CONF.N_MOD_GROUP_BY = 10
+#CONF.N_MOD_GROUP_BY = 10
 
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
@@ -106,9 +106,9 @@ CONF.HASH_OPTIMIZE = true
 CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
-#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100000
-#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 200000
-CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400_000
+CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100_000
+#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 200_000
+#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400_000
 #CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
 
 ##CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 10000
@@ -123,6 +123,9 @@ CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400_000
 CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 
 ##CONF.IOTA_SPLIT_NO = 4
+
+##CONF.TRANSFAR_MARSHAL_STRING_ARRAY_OPTIMIZE = true
+#CONF.TRANSFAR_MARSHAL_STRING_ARRAY_OPTIMIZE = false
 
 ##CONF.VF_ROOT = CONF.HOME+"/Repos"
   CONF["emperor2"].VF_ROOT = CONF.HOME+"/test/Repos"
