@@ -128,6 +128,8 @@ module Fairy
 
     def_prop :IOTA_SPLIT_NO
 
+    def_prop :TRANSFAR_MARSHAL_STRING_ARRAY_OPTIMIZE
+
     def_rpath :VF_ROOT, "Repos"
     def_prop :VF_PREFIX
     def_prop :VF_BASE_NAME_CONVERTER
@@ -293,6 +295,8 @@ module Fairy
   DEFAULT_CONF.SORT_N_GROUP_BY = DEFAULT_CONF.N_MOD_GROUP_BY
 
   DEFAULT_CONF.IOTA_SPLIT_NO = 4
+
+  DEFAULT_CONF.TRANSFAR_MARSHAL_STRING_ARRAY_OPTIMIZE = true
 
 #  DEFAULT_CONF.VF_ROOT = DEFAULT_CONF.HOME+"/Repos"
   DEFAULT_CONF.VF_PREFIX = `hostname`.chomp
