@@ -1,3 +1,8 @@
+Fri Mar 19 17:19:35 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port.rb, conf.rb: 文字列の転送モードをfairy.confで指定できるよう
+	  にした.
+
 Thu Mar 18 22:10:37 2010  Keiju Ishitsuka  <keiju@giant>
 
 	* fairy.rb: [REQ#210]対応(sub)
